# leafy

./: .gitignore  LICENSE.md
app/: package.json  pnpm-lock.yaml
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/editor/: layout.tsx
app/src/app/editor/[[...slug]]/: page.tsx
app/src/components/DirectoryNavigation/: index.tsx
app/src/components/DirectoryNavigation/components/: Item.tsx  ItemIcon.tsx
app/src/components/Icon/: ChevronRight.tsx  FileText.tsx  Image.tsx  QuestionMark.tsx  index.tsx
app/src/services/api/: client.ts  index.ts  interfaces.ts
app/src/services/api/modules/: index.ts
app/src/services/api/modules/directory/: index.ts  interfaces.ts
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/models/: directory.rs
backend/src/routes/: directory.rs
backend/src/services/: directory_service.rs  mod.rs
