[package]
name = "leafy-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0.5"
base64 = "0.22.1"
rocket = { version = "0.5.1", features = ["json"] }
